# POLYDIM_CLA_V3

./: README.md
.agents/: SOUL_AGY_ORCHESTRATOR.md
MCP_Servers/mcp-7-bridges-rust/: ask_cerebras.json  ask_gemini.json  ask_groq.json  ask_hf.json  ask_ollama.json  ask_openrouter.json  ask_sambanova.json  ejecutar.json  listar_operaciones.json
MCP_Servers/procesador-cerebras/: ask_cerebras.json  ask_cerebras_fast.json
MCP_Servers/procesador-gemini/: ask_gemini.json  ask_gemini_pro.json
MCP_Servers/procesador-groq/: ask_groq.json  ask_groq_fast.json  ask_groq_mixtral.json
MCP_Servers/procesador-huggingface/: ask_hf.json
MCP_Servers/procesador-local/: agregar_linea.json  archivos_recientes.json  buscar_clase.json  buscar_funcion.json  buscar_regex.json  buscar_texto.json  buscar_todo.json  contar_lineas.json  contar_palabras.json  convertir_md_html.json  copiar_archivo.json  ejecutar_cmd.json  ejecutar_python.json  eliminar_archivo.json  escribir_config.json  extraer_urls.json  generar_tabla_md.json  git_branches.json  git_commit_push.json  git_diff.json  git_log.json  git_remotes.json  git_status.json  guardar_archivo.json  hash_archivo.json  info_sistema.json  leer_config.json  (+40 more)
Motor_v3/pmtp/: Cargo.toml
Motor_v3/pmtp/src/: main.rs
PAQUETE_AUDITORIA_IA/: 1_POLYDIM_WHITE_BOOK_FINAL.md  2_PRESENTACION_TRIBUNAL.md  3_GUIA_INSTALACION_ALUMNOS.md  4_POLYDIM_Math_Core_V3.ipynb  4_POLYDIM_Math_Core_V3.ipynb.txt  5_POLYDIM_Ablation_Report.ipynb.txt  6_main_rust_pmtp.rs  POLYDIM_ABSTRACT.md  POLYDIM_PAPER_V4.md  POLYDIM_PAPER_V5.md  POLYDIM_WHITE_BOOK_V4.2_FINAL.md
(+51 files in other folders)
