[package]
name = "pmtp"
version = "0.1.0"
edition = "2021"
description = "Polydim Matrix Transfer Protocol (BSR tensor transmission for multi-agent execution)"

[dependencies]
# Dependencias para serialización (simulando Protobuf / binario rápido)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.28", features = ["full"] } # Red asíncrona
