[package]
name = "pmtp"
version = "0.1.0"
edition = "2021"
description = "Polydim Matrix Transfer Protocol (FFI for PyTorch)"

[lib]
name = "pmtp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.28", features = ["full", "rt", "rt-multi-thread"] }
